--- a/index.html
+++ b/index.html
@@ -266,12 +266,12 @@ Envíos a 		todo el país
 		<footer class="contenedor">
 			<div class="redes-sociales">
 				<div class="contenedor-icono">
-					<a href="https://www.facebook.com/Dicson88-124898039319196/" target="_blank" class="facebook">
+					<a href="https://www.facebook.com/Gill-Joyeria-597400984258655" target="_blank" class="facebook">
 						<i class="fab fa-facebook-f"></i>
 					</a>
 				</div>
 				<div class="contenedor-icono">
-					<a href="https://www.instagram.com/dicson88joyas/" target="_blank" class="instagram">
+					<a href="https://www.instagram.com/gilljoyeria/" target="_blank" class="instagram">
 						<i class="fab fa-instagram"></i>
 					</a>
 				</div>
@@ -281,14 +281,14 @@ Envíos a 		todo el país
 					</a>
 				</div>
 				<div class="contenedor-icono">
-					<a href="mailto:accesoriosdicson88@gmail.com ?subject=Me interesa&body=Me interesa mucho este producto, ¿Me podrías brindar mas información?" target="_blank" class="gmail">
+					<a href="mailto:gilljoyeria@gmail.com ?subject=Me interesa&body=Me interesa mucho este producto, ¿Me podrías brindar mas información?" target="_blank" class="gmail">
 						<i class="fas fa-envelope"></i>
 					</a>
 				</div>
 			</div>
 			<div class="creado-por">
 				<p>Catálogo</p>
-				<i class="far fa-copyright">Todos los derechos reservados Dicson 88 Joyería</i><p></p>
+				<i class="far fa-copyright">Todos los derechos reservados Gill Joyería</i><p></p>
 			</div>
 		</footer>
 	</div>
